--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,10 +1,17 @@
 .UI-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 80vw;
     height: 80vh;
+
+  section{
+    font-size: 3vw;
+  }
+
   form{
     width: 100%;
     height: 100%;
-    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
