--- a/styles/guessyStyles/general.css
+++ b/styles/guessyStyles/general.css
@@ -1,4 +1,29 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   box-sizing: border-box;
+  color: var(--fontColor1);
+  padding:0;
+  margin:0;
+}
+
+.invisible{
+  display:none;
+}
+
+.grid-visible{
+  display:grid;
+}
+
+.flex-visible{
+  display:flex;
+}
+
+body{
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--mainColor1);
+  width:100vw;
+  height: 100vh;
 }
