--- a/styles/guessyStyles/guessy.css
+++ b/styles/guessyStyles/guessy.css
@@ -1,10 +1,31 @@
+.overall{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 2vw;
+  gap: 2vw;
+}
+
+.hint{
+  font-weight: bold;
+  font-size: 2vw;
+}
+
+.hint > .act-hint{
+  font-weight: normal;
+}
+
 .container{
   display: flex;
   flex-direction: column;
-  width: 60%;
+  min-width: 380px;
+  width: 55%;
+  max-width: 500px;
   height:95%;
-  gap: 2vw;
-  padding: 3vw;
+  gap: 10%;
+  padding: 5vh 3vw 9vh 3vw;
   align-items: center;
   justify-content: center;
   background-color: var(--mainColor2);
@@ -16,7 +37,7 @@
   width: 100%;
   border-radius: 2vh;
   place-content: center;
-  min-height: 15vh;
+  min-height: 22vh;
   padding: 3vh;
   gap:1vw;
 }
@@ -24,9 +45,9 @@
 .letters{
   display: grid;
   place-content: center;
-  grid-template-columns: 4vw 4vw 4vw 4vw 4vw;
-  column-gap: 7vw;
-  row-gap: 2vw;
+  grid-template-columns: 100% 100% 100% 100%;
+  column-gap: 30%;
+  row-gap: 5%;
   place-items: center;
 }
 
@@ -35,7 +56,7 @@
   align-items: center;
   justify-content: center;
   background-color: var(--buttonColor3);
-  width: 8vw;
+  width: 100%;
   height: 12vh;
   border-radius: 4vh;
   border: none;
