--- a/styles/intro.css
+++ b/styles/intro.css
@@ -6,7 +6,7 @@
     height: 80vh;
 
   section{
-    font-size: 3vw;
+    font-size: 5vw;
   }
 
   form{
@@ -16,10 +16,9 @@
     justify-content: center;
     flex-direction: column;
     gap: 10vh;
-    padding: 30vh;
 
     label{
-      font-size: 4em;
+      font-size: 6vw;
     }
 
     button{
@@ -35,11 +34,15 @@
     }
 
     input{
-      width: 100%;
+      width: 50vw;
       padding: 4vh;
-      border-radius: 6em;
+      border-radius: 4em;
       border: none;
       color: #030f0f;
+    }
+
+    input::placeholder{
+      font-size: 2.2vw;
     }
   }
 }
