--- a/styles/guessyStyles/guessy.css
+++ b/styles/guessyStyles/guessy.css
@@ -9,6 +9,7 @@
 }
 
 .hint{
+  max-width: 20vw;
   font-weight: bold;
   font-size: 2vw;
 }
@@ -20,10 +21,10 @@
 .container{
   display: flex;
   flex-direction: column;
-  min-width: 380px;
+  min-width: 381px;
   width: 55%;
-  max-width: 500px;
-  height:95%;
+  max-width: 600px;
+  height:95vh;
   gap: 10%;
   padding: 5vh 3vw 9vh 3vw;
   align-items: center;
@@ -37,7 +38,7 @@
   width: 100%;
   border-radius: 2vh;
   place-content: center;
-  min-height: 22vh;
+  min-height: 16vh;
   padding: 3vh;
   gap:1vw;
 }
@@ -46,8 +47,7 @@
   display: grid;
   place-content: center;
   grid-template-columns: 100% 100% 100% 100%;
-  column-gap: 30%;
-  row-gap: 5%;
+  gap: 4% 20%;
   place-items: center;
 }
 
@@ -56,6 +56,7 @@
   align-items: center;
   justify-content: center;
   background-color: var(--buttonColor3);
+  padding: 0.5vw;
   width: 100%;
   height: 12vh;
   border-radius: 4vh;
