--- a/styles/general-intro.css
+++ b/styles/general-intro.css
@@ -13,7 +13,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #03624c;
+  background-color: var(--mainColor1);
 }
 
 .flex-visible{
@@ -25,7 +25,7 @@ body{
 }
 
 .fade-in-out{
-  animation: fade-in-out 5s ease-in-out;
+  animation: fade-in-out 5s;
 }
 
 .fade-in{
