Functionality done. Working on the intro now...

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -51,3 +51,37 @@
     transform: translateY(1vh);
   }
 }
+
+@keyframes bounce-out-left{
+  20%{
+    scale: 150%;
+    transform: rotate(-30deg);
+  }
+
+  60%{
+    scale: 150%;
+    transform: rotate(-30deg);
+  }
+}
+
+@keyframes bounce-out-right{
+  20%{
+    scale: 150%;
+    transform: rotate(30deg);
+  }
+
+  60%{
+    scale: 150%;
+    transform: rotate(30deg);
+  }
+}
+
+@keyframes bounce-out{
+  20%{
+    scale: 150%;
+  }
+
+  60%{
+    scale: 150%;
+  }
+}
