--- a/styles/colors.css
+++ b/styles/colors.css
@@ -5,6 +5,6 @@
   --subColor2: #000000;
   --fontColor1: whitesmoke;
   --buttonColor1: #160829;
-  --buttonColor2: #00032c;
+  --buttonColor2: #000000;
   --buttonColor3:#e0e0e0;
 }
