--- a/styles/guessyStyles/general.css
+++ b/styles/guessyStyles/general.css
@@ -4,8 +4,6 @@
   padding: 0;
   margin: 0;
   color: var(--fontColor1);
-  padding:0;
-  margin:0;
 }
 
 .invisible{
@@ -22,7 +20,6 @@
 
 
 body{
-  overflow: hidden;
   background-color: var(--mainColor1);
   width:100%;
   height:100dvh;
@@ -32,4 +29,6 @@ body{
 html, body{
   min-width: 350px;
   min-height: 550px;
+  scroll-behavior: unset;
+  overflow: hidden;
 }
