--- a/styles/guessyStyles/guessy.css
+++ b/styles/guessyStyles/guessy.css
@@ -1,7 +1,18 @@
-.rules{
+.rules-container{
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 100vw;
   height: 100dvh;
+
+  .rules{
+    font-size: 3.5vw;
+    padding: 2% 1.5%;
+    border-radius: 20px;
+    background-color: var(--mainColor2);
+  }
 }
 
 .main-game{
