--- a/styles/guessyStyles/guessy.css
+++ b/styles/guessyStyles/guessy.css
@@ -8,19 +8,49 @@
   height: 100dvh;
 
   .rules{
-    font-size: 3.5vw;
-    padding: 2% 1.5%;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    flex-direction: column;
+    width: max(200px, 85vw);
+    height: max(360px, 68%);
+    padding: 2% 4%;
     border-radius: 20px;
-    background-color: var(--mainColor2);
+    background-color: var(--mainColor2); 
   }
 
   .understood-button{
+    font-size: clamp(10px, 2vh, 24px);
+    display: flex;
+    place-content: center;
+    place-items: center;
+    height: 20%;
+    margin-top: max(0.5%, 10px);
     background-color: var(--buttonColor2);
     border: none;
     border-radius: 20px;
-    padding: 1vw 2vw;
+    padding: clamp(20px, 3%, 40px) clamp(20px, 5%, 200px);
     color: whitesmoke;
+    transition: background-color 0.12s;
+    cursor: pointer;
+
+    &:hover{
+      background-color: var(--buttonColor1);
+    }
   }
+
+  ul{
+    width: 100%;
+    margin: 4%;
+    flex: 1;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  ul li{
+    margin: 1% 0;
+  }  
 }
 
 .main-game{
